--- a/app/Resources/FOSCommentBundle/views/Thread/comment_content.html.twig
+++ b/app/Resources/FOSCommentBundle/views/Thread/comment_content.html.twig
@@ -47,13 +47,13 @@
             {% endblock fos_comment_comment_metas_delete %}
 
             {% block fos_comment_comment_metas_voting %}
+              <button id="signal" class="no-border"><i class="fa fa-exclamation-circle" aria-hidden="true"></i></button>
                 {% if fos_comment_can_vote(comment) %}
-                    <div class="fos_comment_comment_voting">
-                        <button data-url="{{ url("admin_comments", {"id": comment.id}) }}" class="no-border"><i class="fa fa-exclamation-circle" aria-hidden="true"></i></button>
-                        <button data-url="{{ url("fos_comment_new_thread_comment_votes", {"id": comment.thread.id, "commentId": comment.id, "value": 1}) }}" class="no-border"><i class="fa fa-thumbs-o-up" aria-hidden="true"></i></button>
-                        <button data-url="{{ url("fos_comment_new_thread_comment_votes", {"id": comment.thread.id, "commentId": comment.id, "value": -1}) }}" class="no-border"><i class="fa fa-thumbs-o-down" aria-hidden="true"></i></button>
-                        <div class="fos_comment_comment_score" id="fos_comment_score_{{ comment.id }}">{% include "FOSCommentBundle:Thread:comment_votes.html.twig" with { 'commentScore': comment.score } %}</div>
-                    </div>
+                <div class="fos_comment_comment_voting">
+                  <button data-url="{{ url("fos_comment_new_thread_comment_votes", {"id": comment.thread.id, "commentId": comment.id, "value": 1}) }}" class="fos_comment_comment_vote"><i class="fa fa-thumbs-o-up" aria-hidden="true"></i></button>
+                  <button data-url="{{ url("fos_comment_new_thread_comment_votes", {"id": comment.thread.id, "commentId": comment.id, "value": -1}) }}" class="fos_comment_comment_vote"><i class="fa fa-thumbs-o-down" aria-hidden="true"></i></button>
+                  <div class="fos_comment_comment_score" id="fos_comment_score_{{ comment.id }}">{% include "FOSCommentBundle:Thread:comment_votes.html.twig" with { 'commentScore': comment.score } %}</div>
+                </div>
                 {% endif %}
             {% endblock fos_comment_comment_metas_voting %}
         {% endblock fos_comment_comment_metas %}
